--- a/views/play.erb
+++ b/views/play.erb
@@ -1,1 +1,3 @@
-<%= @player_1_name %> vs. <%= @player_2_name %>
+<p><%= @player_1_name %> vs. <%= @player_2_name %></p>
+
+<p><%= @player_2_name %>: 100HP</p>
