--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,5 @@
-<p><%= @player_1_name %> vs. <%= @player_2_name %></p>
+<p><%= @player_1.name %> vs. <%= @player_2.name %></p>
 
-<p><%= @player_2_name %>: 100HP</p>
+<p><%= @player_2.name %>: <%= @player_2.hp %>HP</p>
+
+<a href="/attack">Attack</a>
