--- a/views/play.erb
+++ b/views/play.erb
@@ -1,5 +1,5 @@
-<p><%= @player_1.name %> vs. <%= @player_2.name %></p>
+<p><%= @game.player_1.name %> vs. <%= @game.player_2.name %></p>
 
-<p><%= @player_2.name %>: <%= @player_2.hp %>HP</p>
+<p><%= @game.player_2.name %>: <%= @game.player_2.hp %>HP</p>
 
 <a href="/attack">Attack</a>
