--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,5 @@
+<p> <%= @game.current_turn.name %>'s turn </p>
+
 <p><%= @game.player_1.name %> vs. <%= @game.player_2.name %></p>
 
 <p><%= @game.player_2.name %>: <%= @game.player_2.hp %>HP</p>
