--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,3 +1,8 @@
+<% if @game.current_turn == @game.player_1 %>
 <p><%= @game.player_1.name %> attacked <%= @game.player_2.name %></p>
-
-<a href="/play">OK</a>
+<% else %>
+<%= @game.player_2.name %> attacked <%= @game.player_1.name %>
+<% end %>
+<form action="/switch-turns" method="post">
+  <input type="submit" value="OK">
+</form>
