--- a/views/play.erb
+++ b/views/play.erb
@@ -2,6 +2,8 @@
 
 <p><%= @game.player_1.name %> vs. <%= @game.player_2.name %></p>
 
+<p><%= @game.player_1.name %>: <%= @game.player_1.hp %>HP</p>
+
 <p><%= @game.player_2.name %>: <%= @game.player_2.hp %>HP</p>
 
 <a href="/attack">Attack</a>
